# Stormwater-Management-Model

./: .gitignore  CMakeLists.txt  Dockerfile  DraftOfTheDimensioningTool.xml  Untitled Diagram.xml  fullDiagramDraft.xml  ideaFlowchart.xml  outputRead.py  usefulLinks
docker/: Dockerfile  docker_swmm51.xml  outputRead.py
docker/5.1/: Dockerfile  outputRead.py
src/: Makefile  consts.h  datetime.c  enums.h  macros.h  roadway.c  swmm5.c
